Improve snake controls and add quick navigation sidebar

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
       </nav>
 
       <main class="container dashboard-layout">
+        <div class="dashboard-main">
       <section class="hero dashboard-section active" aria-labelledby="hero-title" data-section="home">
         <div class="hero-text">
           <h1 id="hero-title">Uşaqlar üçün xoş və təhlükəsiz sosial media</h1>
@@ -300,9 +301,27 @@
           ></canvas>
           <aside class="snake-sidebar">
             <p class="snake-instructions">
-              "Başla" düyməsinə kliklə və ox düymələri ilə ilanı yönləndir. Qida topladıqca böyüyəcək və xalın artacaq. Divara və ya özünə dəymə!
+              "Başla" düyməsinə kliklə və sağdakı istiqamət oxlarını istifadə et. Mouse ilə oxlara toxunduqca ilan həmin istiqamətə dönəcək. Qida topladıqca böyüyəcək və xalın artacaq, divara və ya özünə dəymə!
             </p>
             <button class="btn btn-primary" id="snake-start">Oyuna başla</button>
+            <div class="snake-controls" id="snake-controls" aria-hidden="true">
+              <div class="snake-controls-row">
+                <button class="snake-arrow" data-direction="up" aria-label="Yuxarı istiqamət">
+                  ▲
+                </button>
+              </div>
+              <div class="snake-controls-row">
+                <button class="snake-arrow" data-direction="left" aria-label="Sola dön">
+                  ◀
+                </button>
+                <button class="snake-arrow" data-direction="down" aria-label="Aşağı istiqamət">
+                  ▼
+                </button>
+                <button class="snake-arrow" data-direction="right" aria-label="Sağa dön">
+                  ▶
+                </button>
+              </div>
+            </div>
             <div class="leaderboard">
               <h3>Leaderboard</h3>
               <ol id="snake-leaderboard"></ol>
@@ -310,7 +329,40 @@
           </aside>
         </div>
       </section>
-    </main>
+        </div>
+        <aside class="dashboard-sidebar" aria-label="Sürətli keçidlər">
+          <div class="quick-nav">
+            <button class="quick-card" data-section-target="tests" type="button">
+              <span class="quick-icon" aria-hidden="true">🧠</span>
+              <div class="quick-text">
+                <strong>Test zonası</strong>
+                <span>Mini viktorinalara dərhal keç</span>
+              </div>
+            </button>
+            <button class="quick-card" data-section-target="chat" type="button">
+              <span class="quick-icon" aria-hidden="true">💬</span>
+              <div class="quick-text">
+                <strong>Mesajlaşma</strong>
+                <span>Dostlarınla canlı söhbətə qoşul</span>
+              </div>
+            </button>
+            <button class="quick-card" data-section-target="games" type="button">
+              <span class="quick-icon" aria-hidden="true">🎮</span>
+              <div class="quick-text">
+                <strong>Oyun otağı</strong>
+                <span>Snake oyununa tez giriş</span>
+              </div>
+            </button>
+          </div>
+          <div class="sidebar-note">
+            <h3>Günün ipucu</h3>
+            <p>
+              Hər bölmə öz səhifəsində açılır. Sağdakı kartları və ya üst menunu
+              istifadə edərək rahatlıqla Testlərə, Söhbətə və Oyunlara keç.
+            </p>
+          </div>
+        </aside>
+      </main>
 
     <footer class="footer">
       <p>© 2024 Frendli · Rəngli dostluqlar üçün hazırlanıb</p>
