--- a/index.html
+++ b/index.html
@@ -303,21 +303,41 @@
             <p class="snake-instructions">
               "Başla" düyməsinə kliklə və sağdakı istiqamət oxlarını istifadə et. Mouse ilə oxlara toxunduqca ilan həmin istiqamətə dönəcək. Qida topladıqca böyüyəcək və xalın artacaq, divara və ya özünə dəymə!
             </p>
-            <button class="btn btn-primary" id="snake-start">Oyuna başla</button>
+            <button class="btn btn-primary" id="snake-start" type="button">Oyuna başla</button>
             <div class="snake-controls" id="snake-controls" aria-hidden="true">
               <div class="snake-controls-row">
-                <button class="snake-arrow" data-direction="up" aria-label="Yuxarı istiqamət">
+                <button
+                  class="snake-arrow"
+                  data-direction="up"
+                  aria-label="Yuxarı istiqamət"
+                  type="button"
+                >
                   ▲
                 </button>
               </div>
               <div class="snake-controls-row">
-                <button class="snake-arrow" data-direction="left" aria-label="Sola dön">
+                <button
+                  class="snake-arrow"
+                  data-direction="left"
+                  aria-label="Sola dön"
+                  type="button"
+                >
                   ◀
                 </button>
-                <button class="snake-arrow" data-direction="down" aria-label="Aşağı istiqamət">
+                <button
+                  class="snake-arrow"
+                  data-direction="down"
+                  aria-label="Aşağı istiqamət"
+                  type="button"
+                >
                   ▼
                 </button>
-                <button class="snake-arrow" data-direction="right" aria-label="Sağa dön">
+                <button
+                  class="snake-arrow"
+                  data-direction="right"
+                  aria-label="Sağa dön"
+                  type="button"
+                >
                   ▶
                 </button>
               </div>
