Add swipe controls for snake game

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
           ></canvas>
           <aside class="snake-sidebar">
             <p class="snake-instructions">
-              "Başla" düyməsinə kliklə və sağdakı istiqamət oxlarını istifadə et. Mouse ilə oxlara toxunduqca ilan həmin istiqamətə dönəcək. Qida topladıqca böyüyəcək və xalın artacaq, divara və ya özünə dəymə!
+              "Başla" düyməsinə kliklə və sağdakı istiqamət oxlarını istifadə et. Mobil cihazda və ya klaviatura işləmədikdə birbaşa oyun sahəsində sürüşdürərək də yönləndirə bilərsən. Qida topladıqca böyüyəcək və xalın artacaq, divara və ya özünə dəymə!
             </p>
             <button class="btn btn-primary" id="snake-start">Oyuna başla</button>
             <div class="snake-controls" id="snake-controls" aria-hidden="true">
